@@ -1501,7 +1501,11 @@ sub check_template_name {
     my ( $self, $myconfig, $form ) = @_;
 
     my @allowedsuff = qw(css tex txt html xml);
-    if ( $form->{file} =~ /^(.:)*?\/|:|\.\.\// ) {
+    my $test = $form->{file};
+    if ($LedgerSMB::Sysconfig::templates =~ /^(.:)*?\//){
+        $test =~ s#^$LedgerSMB::Sysconfig::templates/?\\?##;
+    }
+    if ( $test =~ /^(.:)*?\/|:|\.\.\// ) {
         $form->error("Directory transversal not allowed.");
     }
     if ( $form->{file} =~ /^${LedgerSMB::Sysconfig::backuppath}\// ) {
